--- a/index.html
+++ b/index.html
@@ -5,6 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1" />
     <meta name="description" content="UnRavel" />
     <title>UnRavel</title>
+    <link rel="icon" type="image/x-icon" href="/logo.png" />
   </head>
   <body>
     <noscript>You need to enable JavaScript to run this app.</noscript>
