--- a/index.html
+++ b/index.html
@@ -10,6 +10,6 @@
   <body>
     <noscript>You need to enable JavaScript to run this app.</noscript>
     <div id="app"><!--ssr-outlet--></div>
-    <script type="module" src="/src/entry-client.jsx"></script>
+    <script type="module" src="/src/entry-client.tsx"></script>
   </body>
 </html>
