--- a/index.html
+++ b/index.html
@@ -6,6 +6,7 @@
     <meta name="description" content="UnRavel" />
     <title>UnRavel</title>
     <link rel="icon" type="image/x-icon" href="/logo.png" />
+    <link rel="stylesheet" href="index.css">
   </head>
   <body>
     <noscript>You need to enable JavaScript to run this app.</noscript>
